--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "starter-express-api",
+  "name": "files-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cyclic-software/starter-express-api.git"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +13,6 @@
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.18.2"
   }
 }
